--- a/create_post.html
+++ b/create_post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Skoleveggen</title>
     <link href="create_post.css" rel="stylesheet" type="text/css"/>
     <script src="createPost.js"></script>
   </head>
@@ -10,10 +11,10 @@
       
       <form class="form" id="form" onsubmit="formOnSubmit()">
         <label for="heading">Emne</label>
-        <input type="text" id="heading" name="heading">
+        <input type="text" id="heading" name="heading" maxlength="50">
 
         <label for="content">Innlegg</label>
-        <textarea type="text" id="content" name="content"></textarea>
+        <textarea type="text" id="content" name="content" maxlength="200"></textarea>
         <p></p>
 
         <input type="submit" value="Submit">
