--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Skoleveggen</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="script.js"></script>
 </head>
@@ -24,15 +24,10 @@
         </div>
       </div>
       <div class="infoContent">
-        <p>Nettsiden vår er bygd på prinsippene om anonymitet, personvern og ytringsfrihet. Disse verdiene er avgjørende for å fremme åpen og ærlig kommunikasjon i den digitale tidsalderen.
-
-        Anonymitet fungerer som en katalysator for åpenhet. Ved å tillate brukere å delta i diskusjoner uten å avsløre identiteten deres, skaper vi et trygt rom der enkeltpersoner fritt kan uttrykke seg uten frykt for fordømmelse eller konsekvenser. Dette gir brukerne mulighet til å dele tankene sine, erfaringene sine og meningene sine åpent, noe som fører til mer ekte og mangfoldige samtaler.
-
-        Vi prioriterer personvern og erkjenner dets betydning i den digitale verdenen. Plattformen vår er utformet for å beskytte brukernes personlige informasjon og sikre at anonymiteten deres forblir intakt. Vi samler ikke unødvendige data eller sporer brukernes aktiviteter, og respekterer retten deres til personvern og anonymitet.
-
-        Ytringsfrihet er en grunnleggende verdi på plattformen vår. Vi tilbyr et forum der mennesker fra alle samfunnslag kan delta i diskusjoner om et bredt spekter av emner, også de som kan være kontroversielle eller følsomme. Vi tror på dialogens og debattens kraft for å fremme forståelse og drive positiv endring i samfunnet.
-
-        Oppsummert er nettsiden vår en oase for de som søker meningsfulle samtaler fri for begrensningene til identitet eller frykt. Ved å omfavne anonymitet, respektere personvern og fremme ytringsfrihet, ønsker vi å skape et mer inkluderende og levende online samfunn der alles stemme blir hørt og verdsatt.</p>
+        <div class="infoBorder">
+          <h1 style="text-align: center;">INFO</h1>
+          <p>Skoleveggen er en nettside bygget på at brukere skal kunne sende innlegg og diskutere hva man vil. Hovedsakelig skal temaer innenfor skole, f.eks skolemiljø. For å skrive eget innlegg trykk på "Skriv innlegg" på hjemmesiden. Du får også sjangsen til å stemme på innlegg for å gi din mening. <br> <br> Takk for at du bruker skoleveggen! Hold all diskusjon vennlig og respektfull.</p>
+        </div>
       </div>
     </div>
   </div>
